--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <br>
                     <li><a href="chopin.html">Chopin</a></li>
                     <br>
-                    <li><a href="beeth.html">Bethoben</a></li>
+                    <li><a href="beeth.html">Beethoven</a></li>
                 </ol>
             </div>
         
