--- a/rach.html
+++ b/rach.html
@@ -13,7 +13,7 @@
     
     <body>
     
-        <h1><a href="index.html">Favorite Composer</a></h1>
+        <h1><a href="index.html">음악저장소</a></h1>
 
         <div id="grid">
             <div>
